[fix] #input_txtのletter-spacingをなくした

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ footer {
     height: 100%;
     line-height: 1.5em;
     font-family: serif;
-    letter-spacing: 0.2em;
     font-size: 16px;
     margin: 0;
     padding: 0;
